force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Self_Vacation_Days_Accrued_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Self_Vacation_Days_Accrued_c__c</fullName>
    <externalDeveloperName>fHCM2__Self_Vacation_Days_Accrued__c</externalDeveloperName>
    <inlineHelpText>Days transferred from previous year</inlineHelpText>
    <label>Deprecated</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>