force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Social_Security_Number_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Social_Security_Number_c__c</fullName>
    <externalDeveloperName>fHCM2__Social_Security_Number__c</externalDeveloperName>
    <label>Social Security Number</label>
    <length>32</length>
    <type>Text</type>
</CustomField>