force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Surname_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Surname_c__c</fullName>
    <externalDeveloperName>fHCM2__Surname__c</externalDeveloperName>
    <inlineHelpText>Surname of this team member</inlineHelpText>
    <label>Surname</label>
    <length>80</length>
    <type>Text</type>
</CustomField>