force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Team_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Team_c__c</fullName>
    <externalDeveloperName>fHCM2__Team__c</externalDeveloperName>
    <inlineHelpText>Name of the team</inlineHelpText>
    <label>Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>