force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Three_Up_Manager_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Three_Up_Manager_c__c</fullName>
    <externalDeveloperName>fHCM2__Three_Up_Manager__c</externalDeveloperName>
    <label>Three-Up Manager</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>