force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_tmpPassword_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_tmpPassword_c__c</fullName>
    <externalDeveloperName>fHCM2__tmpPassword__c</externalDeveloperName>
    <label>tmpPassword</label>
    <length>50</length>
    <type>Text</type>
</CustomField>