force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Trigger_Competency_Assessment_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Trigger_Competency_Assessment_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>fHCM2__Trigger_Competency_Assessment__c</externalDeveloperName>
    <inlineHelpText>When set true, this will trigger a competency assessment for this team member.</inlineHelpText>
    <label>Trigger Competency Assessment</label>
    <type>Checkbox</type>
</CustomField>