force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Trigger_Performance_Review_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Trigger_Performance_Review_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>fHCM2__Trigger_Performance_Review__c</externalDeveloperName>
    <inlineHelpText>When set true, this will trigger a performance review for this team member.</inlineHelpText>
    <label>Trigger Performance Review</label>
    <type>Checkbox</type>
</CustomField>