force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Unique_Id_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Unique_Id_c__c</fullName>
    <externalDeveloperName>fHCM2__Unique_Id__c</externalDeveloperName>
    <inlineHelpText>A unique identifier for this person that will not change.</inlineHelpText>
    <label>Unique Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>