force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_User_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_User_c__c</fullName>
    <externalDeveloperName>fHCM2__User__c</externalDeveloperName>
    <inlineHelpText>The user that is this team member.  The person logging in as this user has full access to the team member records as that person.  If blank then processes will be run by the manager and HR manager only</inlineHelpText>
    <label>User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>