force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_User_Profile_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_User_Profile_c__c</fullName>
    <externalDeveloperName>fHCM2__User_Profile__c</externalDeveloperName>
    <inlineHelpText>Name of user profile for this team member.  User is created when saving a team member without a current user linked.</inlineHelpText>
    <label>User Profile</label>
    <length>80</length>
    <type>Text</type>
</CustomField>