force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Username_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Username_c__c</fullName>
    <externalDeveloperName>fHCM2__Username__c</externalDeveloperName>
    <inlineHelpText>Login username.  If blank then user name defaults to the email address.</inlineHelpText>
    <label>Username</label>
    <length>80</length>
    <type>Text</type>
</CustomField>