force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Vacation_Days_Per_Year_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Vacation_Days_Per_Year_c__c</fullName>
    <externalDeveloperName>fHCM2__Vacation_Days_Per_Year__c</externalDeveloperName>
    <label>Vacation Allowance Per Year</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>1</scale>
    <type>Number</type>
</CustomField>