force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fHCM2_Years_Employment_c__c.field-meta.xml
<CustomField>
    <fullName>fHCM2_Years_Employment_c__c</fullName>
    <externalDeveloperName>fHCM2__Years_Employment__c</externalDeveloperName>
    <inlineHelpText>Number of years service</inlineHelpText>
    <label>Years Employment</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>