force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/fpay_Download_Status_c__c.field-meta.xml
<CustomField>
    <fullName>fpay_Download_Status_c__c</fullName>
    <externalDeveloperName>fpay__Download_Status__c</externalDeveloperName>
    <label>Download Status</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>