force-app/main/default/objects/fHCM2_Team_Member_c__x/fields/WDC_Wellness_Status_c__c.field-meta.xml
<CustomField>
    <fullName>WDC_Wellness_Status_c__c</fullName>
    <externalDeveloperName>WDC_Wellness_Status__c</externalDeveloperName>
    <label>WDC Wellness Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available To Work</fullName>
            </value>
            <value>
                <fullName>Remote Work Only</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>